--- a/style.css
+++ b/style.css
@@ -88,6 +88,28 @@ h2 {
 }
 
 /* SECTIONS */
+.mentee {
+  width: 100%;
+  height: 50vh;
+  min-height: 350px;
+  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.7)), url('https://images.unsplash.com/photo-1435224668334-0f82ec57b605?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDd8fHxlbnwwfHx8fA%3D%3D&w=1000&q=80');
+  background-size: cover;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+}
+
+
+.mentor {
+  width: 100%;
+  height: 50vh;
+  min-height: 350px;
+  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.7)), url('https://images.unsplash.com/photo-1435224668334-0f82ec57b605?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDd8fHxlbnwwfHx8fA%3D%3D&w=1000&q=80');
+  background-size: cover;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+}
 
 .headline {
   width: 100%;
@@ -107,6 +129,17 @@ h2 {
   display: flex;
   padding: 50px 20px;
   justify-content: space-around;
+}
+
+.msg {
+  padding-top: 5%;
+  width: 100%;
+  height: auto;
+  background-color: #f1f1f1;
+}
+
+.msg h1 {
+  color: #3f3f3f;
 }
 
 .feature-container {
