feat> mentor mentee

--- a/style.css
+++ b/style.css
@@ -90,9 +90,9 @@ h2 {
 /* SECTIONS */
 .mentee {
   width: 100%;
-  height: 50vh;
+  height: 100%;
   min-height: 350px;
-  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.7)), url('https://images.unsplash.com/photo-1435224668334-0f82ec57b605?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDd8fHxlbnwwfHx8fA%3D%3D&w=1000&q=80');
+  background: url('https://kr.freepik.com/free-photos-vectors/%ED%9D%B0%EC%83%89-%EB%B0%B0%EA%B2%BD');
   background-size: cover;
   display: none;
   flex-direction: column;
@@ -102,9 +102,9 @@ h2 {
 
 .mentor {
   width: 100%;
-  height: 50vh;
+  height: 100%;
   min-height: 350px;
-  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.7)), url('https://images.unsplash.com/photo-1435224668334-0f82ec57b605?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDd8fHxlbnwwfHx8fA%3D%3D&w=1000&q=80');
+  background: url('https://kr.freepik.com/free-photos-vectors/%ED%9D%B0%EC%83%89-%EB%B0%B0%EA%B2%BD');
   background-size: cover;
   display: none;
   flex-direction: column;
@@ -125,7 +125,7 @@ h2 {
 .features {
   width: 100%;
   height: auto;
-  background-color: #f1f1f1;
+  background-color: #fff;
   display: flex;
   padding: 50px 20px;
   justify-content: space-around;
@@ -135,7 +135,7 @@ h2 {
   padding-top: 5%;
   width: 100%;
   height: auto;
-  background-color: #f1f1f1;
+  background-color: #fff;
 }
 
 .msg h1 {
@@ -374,4 +374,59 @@ input {
   display: none;
  }
   
+}
+
+.mentor-card,
+.mentee-card {
+  background-color: white;
+  border: 1px solid black;
+  padding: 20px;
+  margin: 10px;
+  text-align: center;
+}
+
+.mentor-card h1,
+.mentee-card h1 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.mentor h1 {
+  color: black;
+}
+
+/* 이미지 스타일 */
+.mentor-card img,
+.mentee-card img {
+  max-width: 100%;
+}
+
+/* 멘토/멘티 카드 내 텍스트 스타일 */
+.mentor-card h2,
+.mentee-card h2 {
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+.mentor-card p,
+.mentee-card p {
+  color: black;
+  font-size: 16px;
+  margin-top: 5px;
+}
+
+.contact-button {
+  padding-top: 3%;
+  background-color: #007BFF;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.contact-button:hover {
+  background-color: #0056b3;
 }
